--- a/pages/produit.html
+++ b/pages/produit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merch-Unity</title>
-  <link rel="icon" href="../images/Image2-modified.png" type="image/png">
+  <link rel="icon" href="../images/index_page/Image2-modified.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -13,7 +13,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="/css_pages/style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link href="/css_pages/produit.css" rel="stylesheet" />
+  <link href="../css_pages/produit.css" rel="stylesheet" />
 </head>
 
 
@@ -22,7 +22,7 @@
   <div class="w-full border-b text-gray-600index text-xs">
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
-        <a href="/pages/about.html" class="hover:underline">A propos</a>
+        <a href="about.html" class="hover:underline">A propos</a>
         <a href="#" class="hover:underline">Vie privée</a>
         <a href="#" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
@@ -51,9 +51,9 @@
 
       <!-- Nav Links -->
       <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
-        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
-        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
-        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
+        <li><a href="UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
+        <li><a href="Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
+        <li><a href="Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
       
 
         <li class="relative">
@@ -63,7 +63,7 @@
       <!-- Icons -->
       <div class="flex items-center space-x-6 text-gray-700">
         <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M5 11a6 6 0 1112 0 6 6 0 01-12 0z"/></svg></a>
-        <a href="login.html"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
+        <a href="login.php"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
         <a href="#" class="relative">
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" >
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M17 13a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
