--- a/pages/Hexagone.html
+++ b/pages/Hexagone.html
@@ -115,7 +115,7 @@
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                         <div class="col mb-5">
                             <div class="card h-100">
                                 <!-- Sale badge-->
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
                                 <img class="card-img-top" src="../images/hexagone_page/beret.png" alt="..." />
                                 <!-- Product details-->
@@ -142,13 +142,13 @@
                                             <div class="bi-star-fill"></div>
                                         </div>
                                         <!-- Product price-->
-                                        <span class="text-muted text-decoration-line-through">$20.00</span>
+                                        <span class="text-muted text-decoration-line-through">20,00€</span>
                                         18,00€
                                     </div>
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                         <div class="col mb-5">
                             <div class="card h-100">
                                 <!-- Sale badge-->
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
                                 <img class="card-img-top" src="../images/hexagone_page/bougie.png" alt="..." />
                                 <!-- Product details-->
@@ -166,13 +166,19 @@
                                     <div class="text-center">
                                         <!-- Product name-->
                                         <h5 class="fw-bolder">Bougie</h5>
+                                        <div class="d-flex justify-content-center small text-warning mb-2">
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                         
+                                        </div>
                                         <!-- Product price-->
                                         13,00€
                                     </div>
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +208,7 @@
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +218,7 @@
                         <div class="col mb-5">
                             <div class="card h-100">
                                 <!-- Sale badge-->
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
                                 <img class="card-img-top" src="../images/hexagone_page/echarpe.png" alt="..." />
                                 <!-- Product details-->
@@ -220,14 +226,21 @@
                                     <div class="text-center">
                                         <!-- Product name-->
                                         <h5 class="fw-bolder">Echarpe</h5>
+                                        <div class="d-flex justify-content-center small text-warning mb-2">
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                  
+                                        </div>
                                         <!-- Product price-->
-                                        <span class="text-muted text-decoration-line-through">$50.00</span>
+                                        <span class="text-muted text-decoration-line-through">50,00€</span>
                                         25,00€
                                     </div>
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -243,13 +256,20 @@
                                     <div class="text-center">
                                         <!-- Product name-->
                                         <h5 class="fw-bolder">Tasse</h5>
+                                        <div class="d-flex justify-content-center small text-warning mb-2">
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                            <div class="bi-star-fill"></div>
+                                        </div>
                                         <!-- Product price-->
                                         12,00€
                                     </div>
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -259,7 +279,7 @@
                         <div class="col mb-5">
                             <div class="card h-100">
                                 <!-- Sale badge-->
-                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
                                 <img class="card-img-top" src="../images/hexagone_page/pins.png" alt="..." />
                                 <!-- Product details-->
@@ -276,13 +296,13 @@
                                             <div class="bi-star-fill"></div>
                                         </div>
                                         <!-- Product price-->
-                                        <span class="text-muted text-decoration-line-through">$20.00</span>
+                                        <span class="text-muted text-decoration-line-through">20,00€</span>
                                         3,00€
                                     </div>
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +332,7 @@
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ajouter au panier</a></div>
                                 </div>
                             </div>
                     </button>
@@ -339,13 +359,13 @@
         </div>
 
         <div class="col-xs-6 col-md-3">
-          <h6>Categories</h6>
-          <ul class="footer-links pt-2">
-            <li><a href="http://scanfcode.com/category/c-language/">UPPA</a></li>
-            <li><a href="http://scanfcode.com/category/front-end-development/">Hexagone</a></li>
-            <li><a href="http://scanfcode.com/category/back-end-development/">Lidl</a></li>
-          </ul>
-        </div>
+            <h6>Categories</h6>
+            <ul class="footer-links pt-2">
+              <li><a href="UPPA.html">UPPA</a></li>
+              <li><a href="hexagone.html">Hexagone</a></li>
+              <li><a href="Lidl.html">Lidl</a></li>
+            </ul>
+          </div>
 
         <div class="col-xs-6 col-md-3">
           <h6>Liens rapides</h6>
