--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -360,9 +360,9 @@
         <div class="col-xs-6 col-md-3">
           <h6>Categories</h6>
           <ul class="footer-links pt-2">
-            <li><a href="http://scanfcode.com/category/c-language/">UPPA</a></li>
-            <li><a href="http://scanfcode.com/category/front-end-development/">Hexagone</a></li>
-            <li><a href="http://scanfcode.com/category/back-end-development/">Lidl</a></li>
+            <li><a href="UPPA.html">UPPA</a></li>
+            <li><a href="hexagone.html">Hexagone</a></li>
+            <li><a href="Lidl.html">Lidl</a></li>
           </ul>
         </div>
 
