--- a/pages/Lidl.html
+++ b/pages/Lidl.html
@@ -13,6 +13,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="../css_pages/style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 
@@ -21,9 +22,9 @@
   <div class="w-full border-b text-gray-600 text-xs">
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
-        <a href="pages/about.html" class="hover:underline">A propos</a>
-        <a href="#" class="hover:underline">Vie privée</a>
-        <a href="login.php" class="hover:underline">Contact</a>
+        <a href="about.html" class="hover:underline">A propos</a>
+        <a href="privacy.html" class="hover:underline">Vie privée</a>
+        <a href="contact.php" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
       </div>
       <div class="flex space-x-4 items-center">
