--- a/pages/about.html
+++ b/pages/about.html
@@ -11,73 +11,71 @@
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="/css_pages/style.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css_pages/style.css" rel="stylesheet" />
 </head>
 
 
 <body class="font-sans text-sm">
-  <!-- Top Bar -->
-  <div class="w-full border-b text-gray-600 text-xs">
-    <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
-      <div class="flex space-x-4">
-        <a href="/pages/about.html" class="hover:underline">A propos</a>
-        <a href="#" class="hover:underline">Vie privée</a>
-        <a href="login.html" class="hover:underline">Contact</a>
-        <a href="#" class="hover:underline">Collaborateurs</a>
-      </div>
-      <div class="flex space-x-4 items-center">
-        <a href="#" class="hover:underline">Ma liste de souhait</a>
-        <span class="border-l h-4"></span>
-        <a href="#" class="hover:underline">Suivre ma commande</a>
-        <span class="border-l h-4"></span>
-        
-      </div>
+ <!-- Top Bar -->
+ <div class="w-full border-b text-gray-600 text-xs">
+  <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
+    <div class="flex space-x-4">
+      <a href="about.html" class="hover:underline">A propos</a>
+      <a href="privacy.html" class="hover:underline">Vie privée</a>
+      <a href="contact.php" class="hover:underline">Contact</a>
+      <a href="#" class="hover:underline">Collaborateurs</a>
+    </div>
+    <div class="flex space-x-4 items-center">
+      <a href="#" class="hover:underline">Ma liste de souhait</a>
+      <span class="border-l h-4"></span>
+      <a href="#" class="hover:underline">Suivre ma commande</a>
+      <span class="border-l h-4"></span>
+      
     </div>
   </div>
+</div>
 
-  <!-- Main Navbar -->
-  <nav class="w-full bg-white shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
+<!-- Main Navbar -->
+<nav class="w-full bg-white shadow-sm">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
 
-      <!-- Logo -->
-      <button onclick="window.location.href='index.php';">
-        <div class="flex items-center space-x-2">
-          <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
-          <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
-        </div>
-       </button>
-
-      <!-- Nav Links -->
-      <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
-        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
-        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
-        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
-
-        <li class="relative">
-        </li>
-      </ul>
-
-      <!-- Icons -->
-      <div class="flex items-center space-x-6 text-gray-700">
-        <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M5 11a6 6 0 1112 0 6 6 0 01-12 0z"/></svg></a>
-        <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
-        <a href="#" class="relative">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" >
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M17 13a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-          </svg>
-          <span class="absolute -top-2 -right-2 text-white text-xs rounded-full px-1" style="background-color: #46413b;">1</span>
-        </a>
+    <!-- Logo -->
+    <button onclick="window.location.href='index.php';">
+      <div class="flex items-center space-x-2">
+        <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
+        <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
       </div>
+     </button>
+
+    <!-- Nav Links -->
+    <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
+      <li><a href="UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
+      <li><a href="hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
+      <li><a href="Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
+
+
+      <li class="relative">
+      </li>
+    </ul>
+
+    <!-- Icons -->
+    <div class="flex items-center space-x-6 text-gray-700">
+      <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M5 11a6 6 0 1112 0 6 6 0 01-12 0z"/></svg></a>
+      <a href="login.php"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
+      <a href="#" class="relative">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" >
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M17 13a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+        </svg>
+        <span class="absolute -top-2 -right-2 text-white text-xs rounded-full px-1" style="background-color: #46413b;">1</span>
+      </a>
     </div>
-  </nav>
+  </div>
+</nav>
 <br>
 
   <div class="container-fluid">
-    <header class="header-bg">
-      <div class="container text-center text-black">
-          <h1 class="display-4 fw-bolder">À propos</h1>
-      </div>
-  </header>
+   
 <br><br>
   <div class="row align-items-center text-center">
       <div class="col-md-12">
