--- a/pages/produit.html
+++ b/pages/produit.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="/css_pages/style.css" rel="stylesheet" />
+  <link href="../css_pages/style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="../css_pages/produit.css" rel="stylesheet" />
 </head>
@@ -23,8 +23,8 @@
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
         <a href="about.html" class="hover:underline">A propos</a>
-        <a href="#" class="hover:underline">Vie privée</a>
-        <a href="#" class="hover:underline">Contact</a>
+        <a href="privacy.html" class="hover:underline">Vie privée</a>
+        <a href="contact.php" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
       </div>
       <div class="flex space-x-4 items-center">
