--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -370,8 +370,8 @@
           <h6>Liens rapides</h6>
           <ul class="footer-links pt-2">
             <li><a href="about.html">A propos de nous</a></li>
-            <li><a href="contact.html">Nous contacter</a></li>
-            <li><a href="policy.html">Politique de confidentialité</a></li>
+            <li><a href="contact.php">Nous contacter</a></li>
+            <li><a href="privacy.html">Politique de confidentialité</a></li>
           </ul>
         </div>
       </div>
