--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../css_pages/style.css" rel="stylesheet" />
+  <link rel="icon" href="../images/index_page/Image2-modified.png" type="image/png">
 </head>
 
 
